--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.herianto.login">
 
     <application
@@ -12,8 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".detail.UbahPassword"/>
+        android:usesCleartextTraffic="true"
+        tools:targetApi="p">
+        <activity android:name=".operator.LihatAgenda"></activity>
+        <activity android:name=".operator.EntrySidang" />
+        <activity android:name=".operator.LihatUser" />
+        <activity android:name=".detail.UbahPassword" />
         <activity android:name=".operator.UbahPassUser" />
         <activity android:name=".operator.Reguser" />
         <activity android:name=".detail.Umum" />
@@ -30,7 +35,6 @@
         <activity android:name=".Admin" />
         <activity android:name=".Login" />
     </application>
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
